# WonderSenseKit-Android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/bletest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/bletest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/bletest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
repository/xyz/wonder_wonder/android/wondersensekit/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
repository/xyz/wonder_wonder/android/wondersensekit/1.0.0/: wondersensekit-1.0.0.aar  wondersensekit-1.0.0.aar.sha1  wondersensekit-1.0.0.pom  wondersensekit-1.0.0.pom.md5  wondersensekit-1.0.0.pom.sha1
repository/xyz/wonder_wonder/android/wondersensekit/1.0.1/: wondersensekit-1.0.1.aar.md5  wondersensekit-1.0.1.pom  wondersensekit-1.0.1.pom.md5  wondersensekit-1.0.1.pom.sha1
repository/xyz/wonder_wonder/android/wondersensekit/1.0.2/: wondersensekit-1.0.2.aar  wondersensekit-1.0.2.aar.md5  wondersensekit-1.0.2.aar.sha1  wondersensekit-1.0.2.pom  wondersensekit-1.0.2.pom.md5  wondersensekit-1.0.2.pom.sha1
wsble/: build.gradle
wsble/cpp/: CMakeLists.txt  parser.cpp
wsble/cpp/parser/: CMakeLists.txt  parser.cpp  parser.hpp
wsble/src/androidTest/xyz/wonder_wonder/android/wondersensekit/: ExampleInstrumentedTest.kt
wsble/src/main/: AndroidManifest.xml
wsble/src/test/xyz/wonder_wonder/android/wondersensekit/: ExampleUnitTest.ws.kts
(+8 files in other folders)
